<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BookStore</string>
    <string name="register_agree_with_terms_conditions"><![CDATA[Agree with Terms & Conditions]]></string>
    <string name="buy_purchase">PURCHASE</string>
    <string name="buy_quantity">Quantity:</string>
    <string name="buy_payment_method">Payment Method:</string>
    <string name="buy_credit_card">Credit Card</string>
    <string name="buy_total">Total:</string>
    <string name="buy_buynow">Buy Now</string>
    <string name="buy_cancel">Cancel</string>
    <string name="register_register">Register</string>
    <string name="register_fullname">Full name</string>
    <string name="register_i_m_already_member">I\'m already member</string>
    <string name="register_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_forgot_your_password">Forgot your password?</string>
    <string name="Reset_pass_reset_password">Reset Password</string>
    <string name="Reset_pass_reset">Reset</string>
    <string name="buy_buy">buy</string>
    <string name="profile_username">Username</string>
    <string name="profile_logout">Logout</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="register_email">Email</string>
    <string name="change_password">Change password</string>
</resources>