<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buyActivity">

    <ImageView
        android:id="@+id/buy_book_img"
        android:layout_width="85dp"
        android:layout_height="125dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#CA0B0B"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/buy_purchase"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buy_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Title"
        app:layout_constraintStart_toEndOf="@+id/buy_book_img"
        app:layout_constraintTop_toTopOf="@+id/buy_book_img" />

    <TextView
        android:id="@+id/buy_book_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Type"
        app:layout_constraintStart_toStartOf="@+id/buy_book_title"
        app:layout_constraintTop_toBottomOf="@+id/buy_book_title" />

    <TextView
        android:id="@+id/buy_book_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Description"
        app:layout_constraintStart_toStartOf="@+id/buy_book_author"
        app:layout_constraintTop_toBottomOf="@+id/buy_book_author" />

    <TextView
        android:id="@+id/buy_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Author"
        app:layout_constraintStart_toStartOf="@+id/buy_book_type"
        app:layout_constraintTop_toBottomOf="@+id/buy_book_type" />

    <TextView
        android:id="@+id/buy_book_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="5dp"
        android:text="Price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buy_book_desc"
        app:layout_constraintTop_toBottomOf="@+id/buy_book_desc" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/buy_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy_book_price" />

    <SeekBar
        android:id="@+id/buy_book_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="15dp"
        android:progressBackgroundTint="@color/purple"
        android:thumbTint="@color/purple"
        android:tickMarkTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/buy_payment_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy_book_quantity" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/payment_methods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:selectionRequired="true"
        app:singleSelection="true">


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_credit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/buy_credit_card" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="Paypal" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_btc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="BTC" />


    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/buy_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_methods" />

    <TextView
        android:id="@+id/buy_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/buy_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="€0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/buy_book_buy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:enabled="false"
        android:onClick="buy"
        android:text="@string/buy_buynow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy_total" />

    <TextView
        android:id="@+id/buy_book_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/buy_cancel"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="@+id/buy_book_buy_btn"
        app:layout_constraintStart_toStartOf="@+id/buy_book_buy_btn"
        app:layout_constraintTop_toBottomOf="@+id/buy_book_buy_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>